# ARDUINO_LED

./: .gitignore  .pre-commit-config.yaml  ChatGPTREADME.md  INSTALL.md  README.md  pixel.py  pixel_array.py  pixel_cli.py  pixel_protocol.py  pyproject.toml  requirements-dev.txt  requirements-lock.txt  requirements.txt
CONFIG/: defaults.toml
HELPERS/: export_font_16x16.py  image_to_led.py  show_image.py
src/PIXEL_CLI/: __init__.py  defaults.py  key_state.py  pixel_array.py  pixel_cli.py  ui.py  usb_serial.py
