[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pixel-cli-ui"
version = "0.1.0"
description = "Evdev-driven NeoPixel single-pixel UI over serial"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
dependencies = [
  "evdev>=1.7,<2",
  "pyserial>=3.5,<4",
]

[project.scripts]
pixel-cli = "pixel_cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
